# Scalar-Tech

./: .gitignore  .gitmodules  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setup_openenv.py
agent/: __init__.py  baseline_agent.py
app/: __init__.py  data_loader.py  env.py  grader.py  models.py  reward.py  tasks.py  utils.py
configs/: openenv.yaml
scripts/: evaluate.py  run_env.py  run_real_data.py
server/: Dockerfile  app.py  requirements.txt  supply_disruption_environment.py
